force-app/main/default/objects/loan__Trailer_Segment_Definition__c/loan__Trailer_Segment_Definition__c.object-meta.xml
<CustomObject>
    <label>Trailer Segment Definition</label>
    <nameField>
        <displayFormat>TSD-{00000000}</displayFormat>
        <label>Trailer Segment Definition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailer Segment Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>