force-app/main/default/objects/loan__Trailer_Segment_Definition__c/fields/loan__Total_of_ECOA_Code_Z__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_of_ECOA_Code_Z__c</fullName>
    <label>Total of ECOA Code Z</label>
    <length>18</length>
    <type>Text</type>
</CustomField>