force-app/main/default/objects/loan__Trailer_Segment_Definition__c/fields/loan__Total_of_Status_Code_95__c.field-meta.xml
<CustomField>
    <fullName>loan__Total_of_Status_Code_95__c</fullName>
    <label>Total of Status Code 95</label>
    <length>18</length>
    <type>Text</type>
</CustomField>